--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,5 @@
   "devCommand": "cd frontend && npm run dev",
   "installCommand": "cd frontend && npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "env": {
-    "NEXT_PUBLIC_API_URL": "@api_url"
-  }
+  "regions": ["iad1"]
 }
